2012-02-29 CERDAN Yohann  <cerdanyohann@yahoo.fr>
	* add a "clear caches" task (thanks to Stefano Cecere)
	* small refactoring
2011-11-30 CERDAN Yohann  <cerdanyohann@yahoo.fr>
	* update the save script (does not save cache datas)
2011-10-09 CERDAN Yohann  <cerdanyohann@yahoo.fr>
	* initial release